--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             // Check if the input values match the desired values
             if (nroDocumento === '44451821' && codigoValidacion === '435432') {
                 // Show the PDF document
-                document.getElementById('pdf').innerHTML = '<embed src="https://www.dropbox.com/s/bzpffnuzv75rn23/CONSTANCIAALUMNOREGULAR.pdf?dl=0" type="application/pdf" width="100%" height="600px" />';
+                document.getElementById('pdf').innerHTML = '<embed src="YOUR_URL_PATH_HERE.pdf" type="application/pdf" width="100%" height="600px" />';
             } else {
                 // Display an error message or perform other actions if the validation fails
                 alert('Invalid document or validation code');
