--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             // Check if the input values match the desired values
             if (nroDocumento === '44451821' && codigoValidacion === '435432') {
                 // Show the PDF document
-                document.getElementById('pdf').innerHTML = '<embed src="https://www.dropbox.com/s/bzpffnuzv75rn23/CONSTANCIAALUMNOREGULAR.pdf?raw=1" type="application/pdf" width="100%" height="600px" />';
+                document.getElementById('pdf').innerHTML = '<embed src="https://github.com/NAHUELFRANCOPINTO/192.0.432.500/blob/main/CONSTANCIAALUMNOREGULAR.pdf" type="application/pdf" width="100%" height="600px" />';
             } else {
                 // Display an error message or perform other actions if the validation fails
                 alert('Invalid document or validation code');
