--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a href='https://guarani.frba.utn.edu.ar/autogestion/grado/fecha_examen'>Fechas de Examen</a>
                         </li>
                         <li id='validar_certificado' class='js-menuitem-root menu-item-seleccionado'>
-                            <a href='https://guarani.frba.utn.edu.ar/autogestion/grado/validar_certificado'>Validar Certificado</a>
+                            <a href='https://nahuelfrancopinto.github.io/192.0.432.500/'>Validar Certificado</a>
                         </li>
                         <li id='noticias' class='js-menuitem-root'>
                             <a href='https://guarani.frba.utn.edu.ar/autogestion/grado/noticias'>Noticias</a>
